# rl_shader

./: .gitignore  BendingShader.qml  CMakeLists.txt  FragmentShader.qml  README.md  VertexShader.qml  WaveShader.qml  main.cpp  main.qml  res.qrc  set_env.bat
